# datasette-mailto-links

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
datasette_mailto_links/: __init__.py  __version__.py
tests/: test_mailto_links.py
