[tool.poetry]
name = "datasette-mailto-links"
version = "0.2.4"
description = "Datasette plugin to render email addresses as mailto: links"
authors = ["chris48s"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chris48s/datasette-mailto-links"
classifiers = [
    "Framework :: Datasette"
]

[tool.poetry.dependencies]
python = ">=3.7"
datasette = ">0"

[tool.poetry.dev-dependencies]
isort = "^5.11"
flake8 = { version = "^6.1.0", python = "^3.8.1" }
black = "==23.3.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.datasette]
mailto_links = "datasette_mailto_links"
