[project]
name = "datasette-mailto-links"
version = "0.2.4"
description = "Datasette plugin to render email addresses as mailto: links"
authors = [{name = "chris48s"}]
license = "MIT"
readme = "README.md"
classifiers = [
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>0"
]

[tool.poetry.group.dev.dependencies]
isort = "^5.11"
flake8 = "^7.3.0"
black = "==23.3.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[project.urls]
Home = "https://github.com/chris48s/datasette-mailto-links"
Source = "https://github.com/chris48s/datasette-mailto-links"

[tool.poetry]
requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.masonry.api"

[project.entry-points.datasette]
mailto_links = "datasette_mailto_links"
